Add serverID to all events to sort per fail2ban instance, update language

--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -22,17 +22,22 @@
     "dashboard.cards.total_banned": "Gesamt gesperrte IPs",
     "dashboard.cards.new_last_hour": "Neue in der letzten Stunde",
     "dashboard.cards.total_logged": "Gespeicherte Sperr-Ereignisse",
+    "dashboard.cards.recurring_week": "Wiederkehrende IPs (7 Tage)",
+    "dashboard.cards.recurring_hint": "Behalte wiederholte Angreifer der letzten 7 Tage im Auge.",
     "dashboard.table.jail_name": "Jail-Name",
     "dashboard.table.total_banned": "Insgesamt gesperrt",
     "dashboard.table.new_last_hour": "Neu in letzter Stunde",
     "dashboard.table.banned_ips": "Gesperrte IPs (Entsperren)",
     "dashboard.no_jails": "Keine Jails gefunden.",
+    "dashboard.overview_detail": "Listen ein- oder ausklappen, um betroffene Dienste schneller zu sehen.",
     "dashboard.table.time": "Zeit",
     "dashboard.table.jail": "Jail",
     "dashboard.table.ip": "IP",
     "dashboard.table.log_line": "Logzeile",
     "dashboard.no_banned_ips": "Keine gesperrten IPs",
     "dashboard.unban": "Entsperren",
+    "dashboard.banned.show_more": "Mehr anzeigen",
+    "dashboard.banned.show_less": "Weniger anzeigen",
     "logs.overview.title": "Interne Log-Übersicht",
     "logs.overview.subtitle": "Von Fail2ban-UI gespeicherte Ereignisse über alle Connectoren.",
     "logs.overview.refresh": "Daten aktualisieren",
