--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -22,17 +22,22 @@
     "dashboard.cards.total_banned": "Total g'sperrti IPs",
     "dashboard.cards.new_last_hour": "Neu i dr letschte Stund",
     "dashboard.cards.total_logged": "Gspeichereti Sperr-Ereigniss",
+    "dashboard.cards.recurring_week": "Widerkehrendi IPs (7 Täg)",
+    "dashboard.cards.recurring_hint": "Beobachte wiederholti Angreifer us de letschte 7 Täg.",
     "dashboard.table.jail_name": "Jail-Name",
     "dashboard.table.total_banned": "Insgsamt g'sperrt",
     "dashboard.table.new_last_hour": "Neu in dr letschte Stund",
     "dashboard.table.banned_ips": "G'sperrti IPs (Entsperre)",
     "dashboard.no_jails": "Kei Jails gfunde.",
+    "dashboard.overview_detail": "Listä zämme- oder usklappe, zum schnäll betroffene Dinst erkenne.",
     "dashboard.table.time": "Zyt",
     "dashboard.table.jail": "Jail",
     "dashboard.table.ip": "IP",
     "dashboard.table.log_line": "Log-Zile",
     "dashboard.no_banned_ips": "Kei g'sperrti IPs",
     "dashboard.unban": "Entsperre",
+    "dashboard.banned.show_more": "Meh azeige",
+    "dashboard.banned.show_less": "Weniger azeige",
     "logs.overview.title": "Interni Log-Übersicht",
     "logs.overview.subtitle": "Vo Fail2ban-UI gspeichereti Ereigniss über alli Connectorä.",
     "logs.overview.refresh": "Date aktualisiere",
