--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -22,17 +22,22 @@
     "dashboard.cards.total_banned": "Total Banned IPs",
     "dashboard.cards.new_last_hour": "New Last Hour",
     "dashboard.cards.total_logged": "Stored Ban Events",
+    "dashboard.cards.recurring_week": "Recurring IPs (7 days)",
+    "dashboard.cards.recurring_hint": "Watch repeated offenders detected in the last seven days.",
     "dashboard.table.jail_name": "Jail Name",
     "dashboard.table.total_banned": "Total Banned",
     "dashboard.table.new_last_hour": "New Last Hour",
     "dashboard.table.banned_ips": "Banned IPs (Unban)",
     "dashboard.no_jails": "No jails found.",
+    "dashboard.overview_detail": "Collapse or expand long lists to quickly focus on impacted services.",
     "dashboard.table.time": "Time",
     "dashboard.table.jail": "Jail",
     "dashboard.table.ip": "IP",
     "dashboard.table.log_line": "Log Line",
     "dashboard.no_banned_ips": "No banned IPs",
     "dashboard.unban": "Unban",
+    "dashboard.banned.show_more": "Show more",
+    "dashboard.banned.show_less": "Hide extra",
     "logs.overview.title": "Internal Log Overview",
     "logs.overview.subtitle": "Events stored by Fail2ban-UI across all connectors.",
     "logs.overview.refresh": "Refresh data",
