--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -22,17 +22,22 @@
   "dashboard.cards.total_banned": "IPs bloqueadas totales",
   "dashboard.cards.new_last_hour": "Nuevas en la última hora",
   "dashboard.cards.total_logged": "Eventos de bloqueo almacenados",
+  "dashboard.cards.recurring_week": "IPs recurrentes (7 días)",
+  "dashboard.cards.recurring_hint": "Vigila a los infractores repetidos de los últimos 7 días.",
   "dashboard.table.jail_name": "Nombre del Jail",
   "dashboard.table.total_banned": "Total bloqueadas",
   "dashboard.table.new_last_hour": "Nuevas en la última hora",
   "dashboard.table.banned_ips": "IPs bloqueadas (Desbloquear)",
   "dashboard.no_jails": "No se encontraron jails.",
+  "dashboard.overview_detail": "Colapsa o expande las listas largas para centrarte en los servicios afectados.",
   "dashboard.table.time": "Hora",
   "dashboard.table.jail": "Jail",
   "dashboard.table.ip": "IP",
   "dashboard.table.log_line": "Línea de log",
   "dashboard.no_banned_ips": "No hay IP bloqueadas",
   "dashboard.unban": "Desbloquear",
+  "dashboard.banned.show_more": "Mostrar más",
+  "dashboard.banned.show_less": "Mostrar menos",
   "logs.overview.title": "Resumen interno de registros",
   "logs.overview.subtitle": "Eventos almacenados por Fail2ban-UI a través de todos los conectores.",
   "logs.overview.refresh": "Actualizar datos",
