--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -22,17 +22,22 @@
   "dashboard.cards.total_banned": "Total d'IPs bloquées",
   "dashboard.cards.new_last_hour": "Nouvelles dans la dernière heure",
   "dashboard.cards.total_logged": "Événements de blocage enregistrés",
+  "dashboard.cards.recurring_week": "IPs récurrentes (7 jours)",
+  "dashboard.cards.recurring_hint": "Surveillez les récidivistes observés durant les 7 derniers jours.",
   "dashboard.table.jail_name": "Nom du Jail",
   "dashboard.table.total_banned": "Total bloqués",
   "dashboard.table.new_last_hour": "Nouveaux dans la dernière heure",
   "dashboard.table.banned_ips": "IPs bloquées (Débloquer)",
   "dashboard.no_jails": "Aucun jail trouvé.",
+  "dashboard.overview_detail": "Réduisez ou développez les longues listes pour vous concentrer sur les services impactés.",
   "dashboard.table.time": "Heure",
   "dashboard.table.jail": "Jail",
   "dashboard.table.ip": "IP",
   "dashboard.table.log_line": "Ligne de log",
   "dashboard.no_banned_ips": "Aucune IP bloquée",
   "dashboard.unban": "Débloquer",
+  "dashboard.banned.show_more": "Afficher plus",
+  "dashboard.banned.show_less": "Afficher moins",
   "logs.overview.title": "Vue d'ensemble interne des journaux",
   "logs.overview.subtitle": "Événements enregistrés par Fail2ban-UI sur l'ensemble des connecteurs.",
   "logs.overview.refresh": "Actualiser les données",
