--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -22,17 +22,22 @@
   "dashboard.cards.total_banned": "IP bloccate totali",
   "dashboard.cards.new_last_hour": "Nuove nell'ultima ora",
   "dashboard.cards.total_logged": "Eventi di blocco memorizzati",
+  "dashboard.cards.recurring_week": "IP ricorrenti (7 giorni)",
+  "dashboard.cards.recurring_hint": "Tieni d'occhio gli indirizzi ricorrenti degli ultimi 7 giorni.",
   "dashboard.table.jail_name": "Nome del Jail",
   "dashboard.table.total_banned": "Totale bloccate",
   "dashboard.table.new_last_hour": "Nuove nell'ultima ora",
   "dashboard.table.banned_ips": "IP bloccate (Sblocca)",
   "dashboard.no_jails": "Nessun jail trovato.",
+  "dashboard.overview_detail": "Comprimi o espandi gli elenchi lunghi per concentrarti sui servizi interessati.",
   "dashboard.table.time": "Ora",
   "dashboard.table.jail": "Jail",
   "dashboard.table.ip": "IP",
   "dashboard.table.log_line": "Riga di log",
   "dashboard.no_banned_ips": "Nessuna IP bloccata",
   "dashboard.unban": "Sblocca",
+  "dashboard.banned.show_more": "Mostra di più",
+  "dashboard.banned.show_less": "Mostra meno",
   "logs.overview.title": "Panoramica interna dei log",
   "logs.overview.subtitle": "Eventi memorizzati da Fail2ban-UI su tutti i connettori.",
   "logs.overview.refresh": "Aggiorna dati",
