Add a tiny border at the bottom of the geo stats count

--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -74,10 +74,10 @@
     "logs.modal.jail": "Jail",
     "logs.modal.insights_title": "Ban-Insights",
     "logs.modal.insights_description": "Verteilig nach Länder und wiederholti Angreifer.",
-    "logs.modal.insights_countries": "Sperre nach Land",
-    "logs.modal.insights_countries_empty": "Keni Sperrig i däm Zeitraum.",
-    "logs.modal.insights_countries_hint": "Hauptherkunft im gwählte Zeitraum.",
-    "logs.modal.insights_recurring_hint": "IP-Adrässe, wo Fail2ban mehfach uslöse.",
+    "logs.modal.insights_countries": "Ahzau Sperrige nach Land",
+    "logs.modal.insights_countries_empty": "Aktuell no ke sperrig mit geo-date.",
+    "logs.modal.insights_countries_hint": "Härkunft sortiert nach der gröste Ahzau Sperrige.",
+    "logs.modal.insights_recurring_hint": "IP-Adrässe, wo dür Fail2ban mehfach si gsperrt worde.",
     "logs.modal.total_overall_note": "Gsamti Sperre bis jetzt",
     "logs.modal.total_today_note": "Letschti 24 Stund",
     "logs.modal.total_week_note": "Aktivität vor letschte Wuche",
