add advanced ban actions

--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -126,7 +126,7 @@
     "settings.advanced.title": "Erweiterte Aktionen für Wiederholungstäter",
     "settings.advanced.description": "Synchronisiere wiederholte Angreifer automatisch mit einer externen Firewall oder Blockliste.",
     "settings.advanced.refresh_log": "Protokoll aktualisieren",
-    "settings.advanced.test_button": "Integration testen",
+    "settings.advanced.test_button": "Manuell sperren / Test",
     "settings.advanced.enable": "Automatische permanente Sperre aktivieren",
     "settings.advanced.threshold": "Schwelle vor permanenter Sperre",
     "settings.advanced.threshold_hint": "Sobald eine IP diesen Wert erreicht, wird sie an die Integration übergeben.",
@@ -156,7 +156,7 @@
     "settings.advanced.log_updated": "Aktualisiert",
     "settings.advanced.log_actions": "Aktionen",
     "settings.advanced.unblock_btn": "Entfernen",
-    "settings.advanced.test_title": "Integration testen",
+    "settings.advanced.test_title": "Manuell sperren / Test",
     "settings.advanced.test_ip": "IP-Adresse",
     "settings.advanced.test_server": "Optionaler Server",
     "settings.advanced.test_server_none": "Globale Integration verwenden",
