--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -126,7 +126,7 @@
     "settings.advanced.title": "Erwieterti Aktione für Wiederholungstäter",
     "settings.advanced.description": "Synchronisier d wiederholigstäter automatisch mit dr externe Firewall resp. Sperrlischte.",
     "settings.advanced.refresh_log": "Log aktualisiere",
-    "settings.advanced.test_button": "Integration teste",
+    "settings.advanced.test_button": "Manuell sperre / Test",
     "settings.advanced.enable": "Automatischi permanenti Sperrig aktiviere",
     "settings.advanced.threshold": "Schweue für die permanenti Sperrig",
     "settings.advanced.threshold_hint": "Sobald e IP die Zahu erreitcht, wird sie via Integration gsperrt.",
@@ -156,7 +156,7 @@
     "settings.advanced.log_updated": "Aktualisiert",
     "settings.advanced.log_actions": "Aktione",
     "settings.advanced.unblock_btn": "Entferne",
-    "settings.advanced.test_title": "Integration teste",
+    "settings.advanced.test_title": "Manuell sperre / Test",
     "settings.advanced.test_ip": "IP-Adrässe",
     "settings.advanced.test_server": "Optionale Server",
     "settings.advanced.test_server_none": "Globali Integration bruuchä",
