--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -126,7 +126,7 @@
     "settings.advanced.title": "Advanced Actions for Recurring Offenders",
     "settings.advanced.description": "Automatically synchronize recurring offenders to an external firewall or blocklist.",
     "settings.advanced.refresh_log": "Refresh Log",
-    "settings.advanced.test_button": "Test Integration",
+    "settings.advanced.test_button": "Manually Block / Test",
     "settings.advanced.enable": "Enable automatic permanent blocking",
     "settings.advanced.threshold": "Threshold before permanent block",
     "settings.advanced.threshold_hint": "Once an IP reaches this number of bans it will be forwarded to the integration.",
@@ -156,7 +156,7 @@
     "settings.advanced.log_updated": "Updated",
     "settings.advanced.log_actions": "Actions",
     "settings.advanced.unblock_btn": "Remove",
-    "settings.advanced.test_title": "Test Advanced Integration",
+    "settings.advanced.test_title": "Manually Block / Test",
     "settings.advanced.test_ip": "IP address",
     "settings.advanced.test_server": "Optional server",
     "settings.advanced.test_server_none": "Use global integration settings",
