--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -126,7 +126,7 @@
   "settings.advanced.title": "Acciones avanzadas para reincidentes",
   "settings.advanced.description": "Añade automáticamente IPs reincidentes a un firewall o lista de bloqueo externa.",
   "settings.advanced.refresh_log": "Actualizar registro",
-  "settings.advanced.test_button": "Probar integración",
+  "settings.advanced.test_button": "Bloquear manualmente / Test",
   "settings.advanced.enable": "Habilitar bloqueo permanente automático",
   "settings.advanced.threshold": "Umbral antes del bloqueo permanente",
   "settings.advanced.threshold_hint": "Cuando una IP alcanza este número de bloqueos se enviará a la integración.",
@@ -156,7 +156,7 @@
   "settings.advanced.log_updated": "Actualizado",
   "settings.advanced.log_actions": "Acciones",
   "settings.advanced.unblock_btn": "Eliminar",
-  "settings.advanced.test_title": "Probar integración avanzada",
+  "settings.advanced.test_title": "Bloquear manualmente / Test",
   "settings.advanced.test_ip": "Dirección IP",
   "settings.advanced.test_server": "Servidor opcional",
   "settings.advanced.test_server_none": "Usar integración global",
