--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -126,7 +126,7 @@
   "settings.advanced.title": "Actions avancées pour récidivistes",
   "settings.advanced.description": "Ajoutez automatiquement les récidivistes à un pare-feu ou une liste de blocage externe.",
   "settings.advanced.refresh_log": "Actualiser le journal",
-  "settings.advanced.test_button": "Tester l’intégration",
+  "settings.advanced.test_button": "Bloquer manuellement / Test",
   "settings.advanced.enable": "Activer le blocage permanent automatique",
   "settings.advanced.threshold": "Seuil avant blocage permanent",
   "settings.advanced.threshold_hint": "Une IP atteignant ce nombre de bans sera envoyée à l’intégration.",
@@ -156,7 +156,7 @@
   "settings.advanced.log_updated": "Mis à jour",
   "settings.advanced.log_actions": "Actions",
   "settings.advanced.unblock_btn": "Retirer",
-  "settings.advanced.test_title": "Tester l’intégration avancée",
+  "settings.advanced.test_title": "Bloquer manuellement / Test",
   "settings.advanced.test_ip": "Adresse IP",
   "settings.advanced.test_server": "Serveur optionnel",
   "settings.advanced.test_server_none": "Utiliser l’intégration globale",
