restructure jail.local default config functions, make banactions configurable

--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -119,7 +119,8 @@
     "settings.smtp_sender_placeholder": "noreply@swissmakers.ch",
     "settings.smtp_tls": "TLS verwenden (empfohlen)",
     "settings.send_test_email": "Test-E-Mail senden",
-    "settings.fail2ban": "Fail2Ban-Konfiguration",
+    "settings.fail2ban": "Globale Standard-Fail2Ban-Konfigurationen",
+    "settings.fail2ban.description": "Diese Einstellungen werden auf allen aktivierten Fail2Ban-Servern angewendet und in deren jail.local [DEFAULT]-Abschnitt gespeichert.",
     "settings.enable_bantime_increment": "Bantime-Inkrement aktivieren",
     "settings.default_bantime": "Standard-Bantime",
     "settings.default_bantime_placeholder": "z.B. 48h",
