--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -119,7 +119,8 @@
     "settings.smtp_sender_placeholder": "noreply@swissmakers.ch",
     "settings.smtp_tls": "TLS bruuche (empfohlen)",
     "settings.send_test_email": "Test-Email schicke",
-    "settings.fail2ban": "Fail2Ban-Konfiguration",
+    "settings.fail2ban": "Globale Standard-Fail2Ban-Konfiguratione",
+    "settings.fail2ban.description": "Die Einstellige werde uf alli aktivierte Fail2Ban-Server aagwändet und i däre jail.local [DEFAULT]-Abschnitt gspeicheret.",
     "settings.enable_bantime_increment": "Bantime-Inkrement aktivierä",
     "settings.default_bantime": "Standard-Bantime",
     "settings.default_bantime_placeholder": "z.B. 48h",
