--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -119,7 +119,8 @@
     "settings.smtp_sender_placeholder": "noreply@swissmakers.ch",
     "settings.smtp_tls": "Use TLS (Recommended)",
     "settings.send_test_email": "Send Test Email",
-    "settings.fail2ban": "Fail2Ban Configuration",
+    "settings.fail2ban": "Global Default Fail2Ban Configurations",
+    "settings.fail2ban.description": "These settings will be applied to all enabled Fail2Ban servers and stored in their jail.local [DEFAULT] section.",
     "settings.enable_bantime_increment": "Enable Bantime Increment",
     "settings.default_bantime": "Default Bantime",
     "settings.default_bantime_placeholder": "e.g., 48h",
