--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -119,7 +119,8 @@
   "settings.smtp_sender_placeholder": "noreply@swissmakers.ch",
   "settings.smtp_tls": "Usar TLS (recomendado)",
   "settings.send_test_email": "Enviar correo de prueba",
-  "settings.fail2ban": "Configuración de Fail2Ban",
+  "settings.fail2ban": "Configuraciones Globales Predeterminadas de Fail2Ban",
+  "settings.fail2ban.description": "Estas configuraciones se aplicarán a todos los servidores Fail2Ban habilitados y se almacenarán en su sección [DEFAULT] de jail.local.",
   "settings.enable_bantime_increment": "Habilitar incremento de Bantime",
   "settings.default_bantime": "Bantime por defecto",
   "settings.default_bantime_placeholder": "p.ej., 48h",
