--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -119,7 +119,8 @@
   "settings.smtp_sender_placeholder": "noreply@swissmakers.ch",
   "settings.smtp_tls": "Utiliser TLS (recommandé)",
   "settings.send_test_email": "Envoyer un email de test",
-  "settings.fail2ban": "Configuration Fail2Ban",
+  "settings.fail2ban": "Configurations Globales par Défaut de Fail2Ban",
+  "settings.fail2ban.description": "Ces paramètres seront appliqués à tous les serveurs Fail2Ban activés et stockés dans leur section [DEFAULT] de jail.local.",
   "settings.enable_bantime_increment": "Activer l'incrémentation du Bantime",
   "settings.default_bantime": "Bantime par défaut",
   "settings.default_bantime_placeholder": "par exemple, 48h",
