--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -119,7 +119,8 @@
   "settings.smtp_sender_placeholder": "noreply@swissmakers.ch",
   "settings.smtp_tls": "Usa TLS (raccomandato)",
   "settings.send_test_email": "Invia email di test",
-  "settings.fail2ban": "Configurazione Fail2Ban",
+  "settings.fail2ban": "Configurazioni Globali Predefinite di Fail2Ban",
+  "settings.fail2ban.description": "Queste impostazioni verranno applicate a tutti i server Fail2Ban abilitati e memorizzate nella loro sezione [DEFAULT] di jail.local.",
   "settings.enable_bantime_increment": "Abilita incremento del Bantime",
   "settings.default_bantime": "Bantime predefinito",
   "settings.default_bantime_placeholder": "es. 48h",
