--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -236,6 +236,7 @@
     "servers.actions.test": "Test connection",
     "servers.actions.test_success": "Connection successful",
     "servers.actions.test_failure": "Connection failed",
+    "servers.actions.restart": "Restart Fail2ban",
     "servers.actions.delete": "Delete",
     "servers.actions.delete_confirm": "Delete this server entry?",
     "servers.form.select_key": "Select Private Key",
