Implement X-Callback-Secret for validating API requests

--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -103,6 +103,9 @@
   "settings.callback_url": "URL de retorno de Fail2ban",
   "settings.callback_url_placeholder": "http://127.0.0.1:8080",
   "settings.callback_url_hint": "Esta URL es utilizada por todas las instancias de Fail2Ban para enviar alertas de bloqueo a Fail2Ban UI. Para implementaciones locales, use el mismo puerto que Fail2Ban UI (ej. http://127.0.0.1:8080). Para configuraciones de proxy inverso, use su endpoint cifrado TLS (ej. https://fail2ban.example.com).",
+  "settings.callback_secret": "Secret de URL de Callback de Fail2ban",
+  "settings.callback_secret_placeholder": "Secret de 42 caracteres generado automáticamente",
+  "settings.callback_secret.description": "Este secret se genera automáticamente y se utiliza para autenticar las solicitudes de notificación de bloqueo. Está incluido en la configuración de acción de fail2ban.",
   "settings.destination_email": "Correo electrónico de destino (receptor de alertas)",
   "settings.destination_email_placeholder": "alerts@swissmakers.ch",
   "settings.alert_countries": "Países para alerta",
