--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -103,6 +103,9 @@
   "settings.callback_url": "URL de rappel Fail2ban",
   "settings.callback_url_placeholder": "http://127.0.0.1:8080",
   "settings.callback_url_hint": "Cette URL est utilisée par toutes les instances Fail2Ban pour envoyer les alertes de bannissement à Fail2Ban UI. Pour les déploiements locaux, utilisez le même port que Fail2Ban UI (p. ex. http://127.0.0.1:8080). Pour les configurations de reverse proxy, utilisez votre point de terminaison chiffré TLS (p. ex. https://fail2ban.example.com).",
+  "settings.callback_secret": "Secret d'URL de Callback Fail2ban",
+  "settings.callback_secret_placeholder": "Secret de 42 caractères généré automatiquement",
+  "settings.callback_secret.description": "Ce secret est généré automatiquement et utilisé pour authentifier les demandes de notification de bannissement. Il est inclus dans la configuration d'action de fail2ban.",
   "settings.destination_email": "Email de destination (récepteur des alertes)",
   "settings.destination_email_placeholder": "alerts@swissmakers.ch",
   "settings.alert_countries": "Pays d'alerte",
