--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -103,6 +103,9 @@
   "settings.callback_url": "URL di callback Fail2ban",
   "settings.callback_url_placeholder": "http://127.0.0.1:8080",
   "settings.callback_url_hint": "Questo URL viene utilizzato da tutte le istanze Fail2Ban per inviare gli avvisi di ban a Fail2Ban UI. Per le distribuzioni locali, utilizzare la stessa porta di Fail2Ban UI (es. http://127.0.0.1:8080). Per le configurazioni di reverse proxy, utilizzare il proprio endpoint crittografato TLS (es. https://fail2ban.example.com).",
+  "settings.callback_secret": "Secret URL di Callback Fail2ban",
+  "settings.callback_secret_placeholder": "Secret di 42 caratteri generato automaticamente",
+  "settings.callback_secret.description": "Questo secret viene generato automaticamente e utilizzato per autenticare le richieste di notifica di ban. È incluso nella configurazione dell'azione di fail2ban.",
   "settings.destination_email": "Email di destinazione (ricevente allarmi)",
   "settings.destination_email_placeholder": "alerts@swissmakers.ch",
   "settings.alert_countries": "Paesi per allarme",
